<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>uk.pallas.systems</groupId>
        <artifactId>parent</artifactId>
        <version>0.2.0</version>
    </parent>
    <groupId>uk.pallas.systems.typr</groupId>
    <artifactId>parent</artifactId>
    <version>0.0.7-SNAPSHOT</version>
    <packaging>pom</packaging>
    <url>https://pallassystems.github.io/typr/</url>

    <name>Typr</name>
    <description>Typr is a simple webservice, its goal is simply to hold information about different fields types, Post Code (UK), Latitude (Decimal Degrees), Mobile Country Code, etc.. The goal is to hold a description for each field, validation information for the field and ideally some logic for translation. One of the key things is a "categories" which can be assigned to a type, this is so I can say something is a good 'edge' or this is 'geo' (comes in handy for downstream processing).</description>

    <modules>
        <module>core</module>
        <module>countries</module>
        <module>hibernate</module>
        <module>runnable</module>
        <module>rest</module>
        <module>units</module>
    </modules>

    <scm>
        <connection>scm:git:https://github.com/PallasSystems/typr.git</connection>
        <developerConnection>scm:git:https://github.com/PallasSystems/typr.git</developerConnection>
        <url>https://github.com/PallasSystems/typr</url>
      <tag>HEAD</tag>
  </scm>

    <properties>
        <github_repository_name>typr</github_repository_name>
        <scmpublish.content>${project.build.directory}/staging/parent</scmpublish.content>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <!-- Plugin dependencies. -->
        <org.springdoc.maven.plugin.version>1.4</org.springdoc.maven.plugin.version>
        <spotbugs-maven-plugin.version>4.7.3.4</spotbugs-maven-plugin.version>
        <com.github.therapi.version>0.15.0</com.github.therapi.version>
        <!-- Dependencies. -->
        <org.springframework.boot.version>3.0.6</org.springframework.boot.version>
        <org.springdoc.version>2.1.0</org.springdoc.version>
        <!-- Database dependencies. -->
        <org.postgresql.version>42.6.0</org.postgresql.version>
        <org.hsqldb.version>2.7.1</org.hsqldb.version>
    </properties>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springdoc</groupId>
                    <artifactId>springdoc-openapi-maven-plugin</artifactId>
                    <version>${org.springdoc.maven.plugin.version}</version>
                    <configuration>
                        <attachArtifact>true</attachArtifact>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${org.springframework.boot.version}</version>
                    <configuration>
                        <jvmArguments>-Dspring.application.admin.enabled=true</jvmArguments>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <!-- Import dependency management from Spring Boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${org.springframework.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Databases supported by the system. -->
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${org.postgresql.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hsqldb</groupId>
                <artifactId>hsqldb</artifactId>
                <version>${org.hsqldb.version}</version>
            </dependency>
            <!-- Manages the view of the OpenAPI part. -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${org.springdoc.version}</version>
            </dependency>
            <!--<dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-ui</artifactId>
                <version>${org.springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-javadoc</artifactId>
                <version>${org.springdoc.version}</version>
            </dependency>-->
            <!--<dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-security</artifactId>
                <version>${org.springdoc.version}</version>
            </dependency> -->
            <!-- Linked to OpenAPI/spring-boot-data-jpa, needs to be locked to a fixed version. -->
            <!--<dependency>
                <groupId>io.github.classgraph</groupId>
                <artifactId>classgraph</artifactId>
                <version>4.8.149</version>
            </dependency> -->
            <!-- Required after JDK 1.8 -->
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>4.0.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
